--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "docs",
+  "name": "web",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "13.0.0",
+    "pocketbase": "^0.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stripe": "^11.5.0",
     "ui": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "eslint": "7.32.0",
-    "eslint-config-custom": "*",
-    "tsconfig": "*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "autoprefixer": "^10.4.13",
+    "eslint": "7.32.0",
+    "eslint-config-custom": "*",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
+    "tsconfig": "*",
     "typescript": "^4.5.3"
   }
 }
